# nano-banana-bot

./: .dockerignore  .gitignore  Dockerfile  alembic.ini  docker-compose.yaml  prometheus.yml  pyproject.toml
assets/messages/en/: dialogs.ftl  start.ftl
assets/messages/ru/: dialogs.ftl
assets/messages/uk/: dialogs.ftl
migrations/: env.py
migrations/versions/: 1fd21043232d_add_table_users.py  4a3d7e8778aa_add_table_users.py
src/nano_banana_bot/: __main__.py  const.py
src/nano_banana_bot/config/env/: __init__.py  app.py  base.py  server.py  telegram.py
src/nano_banana_bot/database/: base.py
src/nano_banana_bot/database/alchemy/: __init__.py  context.py  uow.py
src/nano_banana_bot/database/redis/: cache_wrapper.py  keys.py  repository.py
src/nano_banana_bot/endpoints/: __init__.py
src/nano_banana_bot/endpoints/routers/: __init__.py  telegram.py
src/nano_banana_bot/enums/: locale.py  middleware.py
src/nano_banana_bot/exceptions/: bot.py  http.py
src/nano_banana_bot/factory/: __init__.py  config.py  fastapi.py  redis.py  service.py  session_pool.py
src/nano_banana_bot/models/: __init__.py  base.py  user.py
src/nano_banana_bot/runners/: __init__.py  app.py  lifespan.py  polling.py  webhook.py
src/nano_banana_bot/schemas/: __init__.py  base.py  user.py
src/nano_banana_bot/services/: __init__.py
src/nano_banana_bot/utils/: custom_types.py  key_builder.py
tests/: conftest.py  test_database.py
tests/database/: test_database.py
tests/services/: test_user_service.py
tests/utils/: test_cache_wrapper.py
(+23 files in other folders)
