[project]
name = "nano-banana-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "uzrama", email = "mark.uzun7@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
nano-banana-bot = "nano_banana_bot:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"
