[project]
name = "nano-banana-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "uzrama", email = "mark.uzun7@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.25.0",
    "aiogram-contrib>=1.1.4",
    "aiogram-dialog>=2.5.0",
    "aiogram-i18n>=1.4",
    "aiohttp>=3.13.3",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.134.0",
    "fluent-runtime>=0.4.0",
    "greenlet>=3.3.2",
    "msgspec>=0.20.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "redis>=7.2.1",
    "sqlalchemy>=2.0.47",
    "uvicorn>=0.41.0",
]
[tool.ruff]
line-length = 180

[project.scripts]
nano-banana-bot = "nano_banana_bot:main"

[build-system]
requires = ["uv_build>=0.10.7,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

